--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 <body>
     <section class="header" >
         <nav>
-            <a href="home.html"> <img src= "../static/logo.png"></a>
+            <a href="../templates/home.html"> <img src= "../static/logo.png"></a>
             <div class="nav-links">
                 <!-- <i class="fa-solid fa-xmark"></i> -->
                 <ul>
@@ -105,6 +105,6 @@
         </div>
         </section>
         <!DOCTYPE html>
-<script src="../templates/script.js"></script>
+<script src="../static/script.js"></script>
 </body>
 </html>
