--- a/templates/home.html
+++ b/templates/home.html
@@ -1,76 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SahiYog - one stop finance destination</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="../static/home.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SahiYog - one stop finance destination</title>
+        <link rel="stylesheet" href="../static/style.css">
+        <link rel="stylesheet" href="../static/home.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet">
 
-</head>
-<body>
-    <section class="header" >
-        <nav>
-            <a href="../templates/home.html"> <img src= "../static/logo.png"></a>
-            <div class="nav-links">
-                <!-- <i class="fa-solid fa-xmark"></i> -->
+    </head>
+    <body>
+        <section class="header">
+            <nav>
+                <a href="../templates/home.html"> <img
+                        src="../static/logo.png"></a>
+                <div class="nav-links">
+                    <!-- <i class="fa-solid fa-xmark"></i> -->
+                    <ul>
+                        <li><a href='#welcome'>Home</a></li>
+                        <li><a href='#abt'>About Us</a></li>
+                        <li><a href='#contact'>Contact</a></li>
+                    </ul>
+                </div>
+                <!-- <i class="fa-solid fa-bars"></i> -->
+            </nav>
+        </section>
+
+        <section id="welcome">
+            <div class="welcome_text__cont">
+                <div>Welcome</div>
+                <div>To Our</div>
+                <div>Website</div>
+            </div>
+            <div id="login-container">
+                <form id="login-form">
+                    <input type="text" placeholder="Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <input type="submit" value="Login">
+                    <br>
+                    <button id="new-user" onclick>
+                        New User? Sign Up
+                    </button>
+                </form>
+
+            </div>
+        </section>
+
+        <section id="abt">
+            <div>
+                <!-- Text on the left side -->
+                <h1 class="animation1">Your one-stop destination for small
+                    business loans</h1>
+                <h3>Explore our loan comparison tool today and discover the
+                    perfect loan for your small business.</h3>
+                <p>We provide a wide range of services to help you in your daily
+                    life.</p>
                 <ul>
-                    <li><a href='#welcome'>Home</a></li>
-                    <li><a href='#abt'>About Us</a></li>
-                    <li><a href='#contact'>Contact</a></li>
+                    <li>Grow their business</li>
+                    <li>Expand their operations</li>
+                    <li>Fund their projects</li>
                 </ul>
-            </div> 
-            <!-- <i class="fa-solid fa-bars"></i> -->
-        </nav>
-    </section>
+            </div>
+            <div>
+                <!-- Button at the top right -->
+                <button class="abt_btn" id="abt_btn" onclick>Sign up now to
+                    access our portal</button>
+                <!-- Image below the button -->
+                <img class="page2 animation1" src="../static/Home.png"
+                    alt="Your Image">
+            </div>
+        </section>
 
-    <section id="welcome">
-        <div class="welcome_text__cont">
-            <div>Welcome</div>
-            <div>To Our</div>    
-            <div>Website</div>
-        </div>
-        <div id="login-container">
-            <form id="login-form">
-                <input type="text" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
-                <input type="submit" value="Login">
-                <br>
-                <button  id="new-user" onclick="">
-                    New User? Sign Up
-                </button>
-            </form>
-            
-        </div>
-    </section>
-
-    <section id="abt">
-        <div>
-            <!-- Text on the left side -->
-            <h1>Your one-stop destination for small business loans</h1>
-            <h3>Explore our loan comparison tool today and discover the perfect loan for your small business.</h3>
-            <p>We provide a wide range of services to help you in your daily life.</p>
-            <ul>
-                <li>Grow their business</li>
-                <li>Expand their operations</li>
-                <li>Fund their projects</li>
-            </ul>
-        </div>
-        <div>
-            <!-- Button at the top right -->
-            <button class="abt_btn" id="abt_btn" onclick="">Sign up now to access our portal</button>
-            <!-- Image below the button -->
-            <img class= "page2" src="../static/Home.png" alt="Your Image">
-        </div>
-    </section>
-
-    <section id="abt2">
-       <div> <h1>Tailored finance options based <br>on your eligibility</h1>
-        <p>SahiYog is a team of dedicated individuals who are here to assist you with various services. We provide all the necessary information you need to make an informed decision, including: </p>
-      </div>
+        <section id="abt2">
+            <div> <h1 class="leftR">FIND FINANCE BASED ON YOUR SPECIFIC <br>ELIGIBILITY
+                    CRITERIA</h1>
+                <div class="abtDiv2">
+                    <div style="width:100%">
+                        <img src="/static/loan-compare2.png" alt="compare" />
+                    </div>
+                    <div style="width:100%" class="bottomU">
+                        <p>We provide a wide range of services to help you in
+                            your daily life.</p>
+                        <ul>
+                            <li>Interest rates</li>
+                            <li>Loan Amounts</li>
+                            <li>Repayment Terms</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <!-- Text on the left side -->
             <!-- <div class="row">
                 <div class="abt-col">
@@ -89,22 +111,31 @@
 
                 </div>
             </div> -->
-        
+
         </section>
-    <section id="contact">
-        <div>
-            <h2>Contact us</h2>
-            <!-- <h1>Tailored finance options based on your eligibility</h1> -->
-            <p>SahiYog is a team of dedicated individuals who are here to assist <br> you with various services. </p>
-            <div class="icon">
-                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"> <img src= "../static/facebook.svg"></a>
-                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"> <img src= "../static/instagram.svg"></a>
-                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"> <img src= "../static/twitter.svg"></a>
-                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"> <img src= "../static/phone-solid.svg"></a>
-               
-        </div>
-        </section>
-        <!DOCTYPE html>
-<script src="../static/script.js"></script>
-</body>
-</html>
+        <section id="contact">
+            <div>
+                <h2>Contact us</h2>
+                <!-- <h1>Tailored finance options based on your eligibility</h1> -->
+                <p>SahiYog is a team of dedicated individuals who are here to
+                    assist <br> you with various services. </p>
+                <div class="icon">
+                    <a
+                        href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F">
+                        <img src="../static/facebook.svg"></a>
+                    <a
+                        href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F">
+                        <img src="../static/instagram.svg"></a>
+                    <a
+                        href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F">
+                        <img src="../static/twitter.svg"></a>
+                    <a
+                        href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F">
+                        <img src="../static/phone-solid.svg"></a>
+
+                </div>
+            </section>
+            <!DOCTYPE html>
+            <script src="../static/script.js"></script>
+        </body>
+    </html>
