--- a/static/signup.css
+++ b/static/signup.css
@@ -137,6 +137,12 @@
     background-color: #0056b3;
   }
 } */
+*{ 
+  margin: 0;
+     padding: 0;
+     font-family: "Poppins", sans-serif;
+  }
+
 .container h1{
   text-align: center;
 }
