--- a/templates/home.html
+++ b/templates/home.html
@@ -37,9 +37,10 @@
                 <div>Website</div>
             </div>
             <div id="login-container">
-                <form id="login-form">
-                    <input type="text" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
+                <form action="/login_validate" id="login-form" method="post">
+                    <input id="email" type="text" placeholder="Email" required>
+                    <input id="password" type="password" placeholder="Password" required>
+                    
                     <input type="submit" value="Login">
                     <br>
                     <button id="new-user" onclick>
