--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,7 +24,7 @@
     </nav>
 <div class="container">
   <h1>Signup </h1>
-  <form action="#" method="post">
+  <form action="/signup" method="post">
     <div>
 
       <div class="form-group">
