--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <input type="text" id="loan_amnt" name="loan_amnt">
         </div>
         <div class="formgroup">
-            <label for="selected_interest">Interest Rate:</label>
+            <label for="selected_interest">Max interest rate you can pay:</label>
             <input type="text" id="selected_interest" name="selected_interest">
         </div>
         <div class="formgroup">
